# boundflow

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  env.sh  environment-macos-arm64.yaml  environment.yaml  pyproject.toml  pytest.ini  requirements.txt
docs/: bench_jsonl_schema.md  change_log.md  executor_comparison.md  llm_handoff_summary.md  next_plan_after_phase4a.md  p4_p5.md  p5.md  phase4_plan.md  phase4a_plan_task_cnn_and_permute.md  phase5E.md  phase5_done.md  reference.md  stage_4_critical_review.md  strategy_a_refactor_plan.md  strategy_response_and_suggestions.md
gemini_doc/: README.md  ae_readme_phase6h.md  artifact_appendix_phase5d.md  artifact_claims_phase5d.md  bound_methods_and_solvers_design.md  boundflow_architecture_review_and_extension.md  boundflow_docs_skill.md  boundflow_full_pipeline_director_view.md  boundflow_full_pipeline_from_claims_to_ae.md  change_2025-12-17_next_plan_after_phase4c.md  change_2025-12-17_phase4b3_layout_only_permute_pass.md  change_2025-12-17_phase4c_interval_conv2d_tvm.md  change_2025-12-17_phase4c_triple_alignment_test.md  change_2025-12-17_phase4d_onnx_frontend_min_loop.md  change_2025-12-17_phase5_engineering_plan.md  change_2025-12-17_pytest_collection_and_test_env_fix.md  change_2025-12-17_tvm_switch_to_relax_ops.md  change_2025-12-18_add_tvm_backend_optimization_memo.md  change_2025-12-18_disable_tvmffi_optional_torch_c_dlpack_jit.md  change_2025-12-18_phase5a_pr1_buffer_contract_followup.md  change_2025-12-18_phase5a_pr1_taskgraph_planbundle_scheduler.md  (+157 more)
scripts/: bench_ablation_matrix.py  (+22 more)
(+118 files in other folders)
